Tag contents no longer word wrap
At the moment, if there is too much text to display, it is overflowed
this is ugly as hell, but should be fixed when I do multiline tag lists
at some point.

--- a/bmat/static/styles.css
+++ b/bmat/static/styles.css
@@ -329,11 +329,12 @@ input[type=text], input[type=password] {
     border: 1px solid;
     margin-right:4px;
     border-radius:5px;
-    overflow:hidden;
+    white-space:nowrap;
 }
 
 .tags.tags.tags {
     padding:0px;
+    overflow:hidden;
 }
 
 
